# ambl

./: .gitignore  BUILD  Cargo.toml  README.md  ambl.yaml  compile.gup  compile.gup.sh  ideas.md  pants.toml  release.gup  trou.yaml
api/: Cargo.toml
api/src/: lib.rs
builder/: Cargo.toml
builder/src/: lib.rs
builtin/cargo/: Cargo.toml
builtin/cargo/src/: lib.rs
builtin/ninja/: Cargo.toml
builtin/ninja/src/: eval.rs  lib.rs  target.rs
builtin/rust/: Cargo.toml
builtin/rust/src/: lib.rs
common/: Cargo.toml
common/src/: build.rs  ctx.rs  ffi.rs  lib.rs  rule.rs  target.rs
common/wit/: builder.wit
doc/: checksums.md  dependencies.md  modules.md  paths.md  sandbox.md
doc/ideas/: external-modules.md
example/cargo/: .trou.cache  Cargo.toml  ambl.yaml  trou.yaml
example/cargo/ambl-builder/: Cargo.toml
example/cargo/ambl-builder/src/: lib.rs
example/cargo/trou-builder/: Cargo.toml
example/ninja/: ambl.yaml  build.ninja
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: export_test.rs
nix/: default.nix  sources.json
pants-plugins/trou/: register.py  rules.py  targets.py
runtime/: Cargo.toml  wit
runtime/src/: build.rs  build_request.rs  cli_opts.rs  ctx.rs  debug.rs  dependency.rs  err.rs  fileset.rs  init.rs  invoke.rs  main.rs  module.rs  path.rs  path_util.rs  persist.rs  project.rs  sandbox.rs  sync.rs  ui.rs  wasm.rs  wasm_component.rs
runtime/src/test/: mod.rs  test_checksum.rs  test_deps.rs  test_dsl.rs  test_exec.rs  test_module.rs  test_paths.rs  util.rs
