[package]
name = "ambl-sample-builder"
version = "0.1.0"
edition = "2021"
# requires https://github.com/rust-lang/cargo/issues/9406
# forced-target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib"]

# [build]
# rustflags = [
#   "-Clink-arg=-undefined","-Clink-arg=dynamic_lookup", # allow undefined symbols
# ]

[dependencies]
ambl-api = { path = "../api" }
# capnp = "0.14"
# wasm-bindgen = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"


# log = "0.4"
# env_logger = "0.9"
# walkdir = "2"
# itertools = "0.10"
# memmap2 = "0.5"
# nix-nar = "0.2"
# filetime = "0.2"
# fd-lock = "3"
#
# [dependencies.reqwest]
# default-features = false
# version = "0.11"
# features = [ "blocking", "rustls-tls" ]
