[package]
name = "ambl-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", version = "0.9.0" }
