[package]
name = "ambl-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
ambl-common = { path = "../common" }
serde_json = "1.0"
serde_yaml = "0.8" # 0.9 is incompatible with JSON and handwritten YAML: https://github.com/dtolnay/serde-yaml/releases/tag/0.9.0
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
wasmtime = "2.0"
tempdir = "0.3"
log = "0.4"
env_logger = "0.9"
walkdir = "2"
glob = "0.3"
lazy_static = "1"

[dev-dependencies]
ctor = "0.1"
serial_test = "0.9"
