[package]
name = "ambl-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
ambl-common = { path = "../common" }
ambl-api = { path = "../api" }
serde_json = "1.0"
serde_yaml = "0.8" # 0.9 is incompatible with JSON and handwritten YAML: https://github.com/dtolnay/serde-yaml/releases/tag/0.9.0
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
wasmtime = { version = "10.0", features = ["component-model"] }
tempdir = "0.3"
log = "0.4"
env_logger = "0.9"
walkdir = "2"
glob = "0.3"
lazy_static = "1"
crc32fast = "1"
clap = { version = "4.1", features = ["derive"] }
superconsole = "0.2"
os_pipe = "1"

[dev-dependencies]
ctor = "0.1"
serial_test = "0.9"
ambl-api = { path = "../api" }

[[bin]]
name = "ambl"
path = "src/main.rs"
