[package]
name = "ambl-builtin-ninja"
version = "0.1.0"
edition = "2021"
# forced-target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib"]

[dependencies]
ambl-api = { path = "../../api" }
ninja-build-syntax = "0.0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
log = "0.4"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", version = "0.9.0" }
wit-component = "0.12.0"
wat = "1.0"
